# ShogunAI2

./: .gitignore  README.md  SHOGUN AI Wireframes.html  SHOGUN Hi-Fi UI.html  app.css  app.jsx  icons.jsx  index.html  package.json  screens-a.jsx  screens-b.jsx  screens-c.jsx  screens-meetings.jsx  settings-modal.jsx  styles.css  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  license.rs  main.rs
src-tauri/src/agent/: budget.rs  executor.rs  mod.rs  planner.rs
src-tauri/src/capture/: audio.rs  input.rs  mod.rs  screen.rs
src-tauri/src/db/: schema.sql
src-tauri/src/mcp/: host.rs
src-tauri/src/pipeline/: index.rs  mod.rs  normalize.rs  store.rs  summarize.rs
src/components/: icons.tsx
src/styles/: app.css  tokens.css
